Cambie el  texto a Italic y bold

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
             android:layout_height="wrap_content"
             android:text="Carlos Fernando MQ"
             android:textSize="13pt"
-            android:textStyle="bold"
+            android:textStyle="italic|bold"
             android:textAlignment="center"/>
     </LinearLayout>
     <LinearLayout
